--- a/setup.cfg
+++ b/setup.cfg
@@ -8,12 +8,12 @@ description = Add a short description here!
 author = Luke Gessler
 author_email = lukegessler@gmail.com
 license = MIT
-long_description = file: README.rst
-long_description_content_type = text/x-rst; charset=UTF-8
-url = https://github.com/pyscaffold/pyscaffold/
+long_description = file: README.md
+long_description_content_type = text/markdown; charset=UTF-8
+url = https://github.com/lgessler/conllulex
 # Add here related links, for example:
 project_urls =
-    Documentation = https://pyscaffold.org/
+    Documentation = https://github.com/lgessler/conllulex/README.md
 #    Source = https://github.com/pyscaffold/pyscaffold/
 #    Changelog = https://pyscaffold.org/en/latest/changelog.html
 #    Tracker = https://github.com/pyscaffold/pyscaffold/issues
@@ -27,16 +27,13 @@ platforms = any
 # Add here all kinds of additional classifiers as defined under
 # https://pypi.org/classifiers/
 classifiers =
-    Development Status :: 4 - Beta
     Programming Language :: Python
 
 
 [options]
 zip_safe = False
-packages = find_namespace:
+packages = conllulex
 include_package_data = True
-package_dir =
-    =src
 
 # Require a min/specific Python version (comma-separated conditions)
 # python_requires = >=3.8
@@ -46,13 +43,8 @@ package_dir =
 # new major versions. This works if the required packages follow Semantic Versioning.
 # For more information, check out https://semver.org/.
 install_requires =
-    importlib-metadata; python_version<"3.8"
-
-
-[options.packages.find]
-where = src
-exclude =
-    tests
+    importlib-metadata; python_version>"3.6"
+    conllu>=4.4.1
 
 [options.extras_require]
 # Add here additional requirements for extra features, to install with:
@@ -60,12 +52,14 @@ exclude =
 # PDF = ReportLab; RXP
 
 # Add here test requirements (semicolon/line-separated)
-testing =
-    setuptools
-    pytest
-    pytest-cov
+# testing =
+#     setuptools
+#     pytest
+#     pytest-cov
 
 [options.entry_points]
+console_scripts =
+    testtt = conllulex.main:foo
 # Add here console scripts like:
 # console_scripts =
 #     script_name = conllulex.module:function
@@ -76,43 +70,43 @@ testing =
 # pyscaffold.cli =
 #     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
 
-[tool:pytest]
-# Specify command line options as you would do when invoking pytest directly.
-# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
-# in order to write a coverage file that can be read by Jenkins.
-# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
-#          Comment those flags to avoid this pytest issue.
-addopts =
-    --cov conllulex --cov-report term-missing
-    --verbose
-norecursedirs =
-    dist
-    build
-    .tox
-testpaths = tests
-# Use pytest markers to select/deselect specific tests
-# markers =
-#     slow: mark tests as slow (deselect with '-m "not slow"')
-#     system: mark end-to-end system tests
+# [tool:pytest]
+# # Specify command line options as you would do when invoking pytest directly.
+# # e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
+# # in order to write a coverage file that can be read by Jenkins.
+# # CAUTION: --cov flags may prohibit setting breakpoints while debugging.
+# #          Comment those flags to avoid this pytest issue.
+# addopts =
+#     --cov conllulex --cov-report term-missing
+#     --verbose
+# norecursedirs =
+#     dist
+#     build
+#     .tox
+# testpaths = tests
+# # Use pytest markers to select/deselect specific tests
+# # markers =
+# #     slow: mark tests as slow (deselect with '-m "not slow"')
+# #     system: mark end-to-end system tests
 
-[devpi:upload]
-# Options for the devpi: PyPI server and packaging tool
-# VCS export must be deactivated since we are using setuptools-scm
-no_vcs = 1
-formats = bdist_wheel
+# [devpi:upload]
+# # Options for the devpi: PyPI server and packaging tool
+# # VCS export must be deactivated since we are using setuptools-scm
+# no_vcs = 1
+# formats = bdist_wheel
 
-[flake8]
-# Some sane defaults for the code style checker flake8
-max_line_length = 88
-extend_ignore = E203, W503
-# ^  Black-compatible
-#    E203 and W503 have edge cases handled by black
-exclude =
-    .tox
-    build
-    dist
-    .eggs
-    docs/conf.py
+# [flake8]
+# # Some sane defaults for the code style checker flake8
+# max_line_length = 88
+# extend_ignore = E203, W503
+# # ^  Black-compatible
+# #    E203 and W503 have edge cases handled by black
+# exclude =
+#     .tox
+#     build
+#     dist
+#     .eggs
+#     docs/conf.py
 
 [pyscaffold]
 # PyScaffold's parameters when the project was created.
