--- a/setup.cfg
+++ b/setup.cfg
@@ -44,7 +44,8 @@ include_package_data = True
 # For more information, check out https://semver.org/.
 install_requires =
     importlib-metadata; python_version>"3.6"
-    conllu>=4.4.1
+    conllu>=4.4.1,<5.0
+    click>=8.0.3,<9.0
 
 [options.extras_require]
 # Add here additional requirements for extra features, to install with:
@@ -59,7 +60,7 @@ install_requires =
 
 [options.entry_points]
 console_scripts =
-    testtt = conllulex.main:foo
+    conllulex = conllulex.main
 # Add here console scripts like:
 # console_scripts =
 #     script_name = conllulex.module:function
