corrections, finish impl validation

--- a/setup.cfg
+++ b/setup.cfg
@@ -60,7 +60,11 @@ install_requires =
 
 [options.entry_points]
 console_scripts =
-    conllulex = conllulex.main
+    conllulex-enrich = conllulex.main:enrich
+    conllulex2json = conllulex.main:conllulex2json
+    conllulex2json-streusle = conllulex.main:conllulex2json_streusle
+    conllulex2json-pastrie = conllulex.main:conllulex2json_pastrie
+    conllulex2json-hindi = conllulex.main:conllulex2json_hindi
 # Add here console scripts like:
 # console_scripts =
 #     script_name = conllulex.module:function
