add govobj, add readme

--- a/setup.cfg
+++ b/setup.cfg
@@ -65,6 +65,7 @@ console_scripts =
     conllulex2json-streusle = conllulex.main:conllulex2json_streusle
     conllulex2json-pastrie = conllulex.main:conllulex2json_pastrie
     conllulex2json-hindi = conllulex.main:conllulex2json_hindi
+    conllulex-govobj = conllulex.main:govobj
 # Add here console scripts like:
 # console_scripts =
 #     script_name = conllulex.module:function
