--- a/setup.cfg
+++ b/setup.cfg
@@ -46,6 +46,7 @@ install_requires =
     importlib-metadata; python_version>"3.6"
     conllu>=4.4.1,<5.0
     click>=8.0.3,<9.0
+    stanza>=1.0<2.0
 
 [options.extras_require]
 # Add here additional requirements for extra features, to install with:
