--- a/setup.cfg
+++ b/setup.cfg
@@ -61,6 +61,7 @@ install_requires =
 
 [options.entry_points]
 console_scripts =
+    glam2conllulex = conllulex.main:glam2conllulex
     conllulex-enrich = conllulex.main:enrich
     conllulex2json = conllulex.main:conllulex2json
     conllulex-govobj = conllulex.main:govobj
